--- a/api/game/models/game.settings.json
+++ b/api/game/models/game.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "games",
   "info": {
-    "name": "game"
+    "name": "game",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -12,6 +13,12 @@
   "pluginOptions": {},
   "attributes": {
     "gamecode": {
+      "type": "string"
+    },
+    "playerone": {
+      "type": "string"
+    },
+    "playertwo": {
       "type": "string"
     }
   }
