add user and hacker collection types

--- a/api/hackerinfo/models/hackerinfo.settings.json
+++ b/api/hackerinfo/models/hackerinfo.settings.json
@@ -1,8 +1,8 @@
 {
   "kind": "collectionType",
-  "collectionName": "games",
+  "collectionName": "hackerinfos",
   "info": {
-    "name": "game",
+    "name": "Hackerinfo",
     "description": ""
   },
   "options": {
@@ -12,22 +12,15 @@
   },
   "pluginOptions": {},
   "attributes": {
-    "gamecode": {
+    "username": {
       "type": "string"
     },
-    "playerone": {
+    "picture": {
       "type": "string"
     },
-    "playertwo": {
-      "type": "string"
-    },
-    "userinfo": {
-      "via": "game",
-      "model": "userinfo"
-    },
-    "hackerinfo": {
-      "via": "game",
-      "model": "hackerinfo"
+    "game": {
+      "model": "game",
+      "via": "hackerinfo"
     }
   }
 }
