--- a/api/game/models/game.settings.json
+++ b/api/game/models/game.settings.json
@@ -28,6 +28,9 @@
     "hackerinfo": {
       "via": "game",
       "model": "hackerinfo"
+    },
+    "startingPlayer": {
+      "type": "string"
     }
   }
 }
