--- a/api/userinfo/models/userinfo.settings.json
+++ b/api/userinfo/models/userinfo.settings.json
@@ -28,8 +28,8 @@
       "type": "string"
     },
     "game": {
-      "model": "game",
-      "via": "userinfo"
+      "via": "userinfo",
+      "model": "game"
     }
   }
 }
