add notes backend

--- a/api/hackerinfo/models/hackerinfo.settings.json
+++ b/api/hackerinfo/models/hackerinfo.settings.json
@@ -21,6 +21,10 @@
     "game": {
       "via": "hackerinfo",
       "model": "game"
+    },
+    "hackernotes": {
+      "via": "hackerinfo",
+      "collection": "hackernote"
     }
   }
 }
