--- a/api/userinfo/models/userinfo.settings.json
+++ b/api/userinfo/models/userinfo.settings.json
@@ -33,6 +33,10 @@
     },
     "intrests": {
       "type": "string"
+    },
+    "usernotes": {
+      "via": "userinfo",
+      "collection": "usernote"
     }
   }
 }
