--- a/api/game/models/game.settings.json
+++ b/api/game/models/game.settings.json
@@ -31,6 +31,14 @@
     },
     "startingPlayer": {
       "type": "string"
+    },
+    "usernotes": {
+      "via": "game",
+      "collection": "usernote"
+    },
+    "hackernotes": {
+      "via": "game",
+      "collection": "hackernote"
     }
   }
 }
