--- a/api/usernote/models/usernote.settings.json
+++ b/api/usernote/models/usernote.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "usernotes",
   "info": {
-    "name": "Usernote"
+    "name": "Usernote",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -14,8 +15,8 @@
     "note": {
       "type": "string"
     },
-    "userinfo": {
-      "model": "userinfo",
+    "game": {
+      "model": "game",
       "via": "usernotes"
     }
   }
