--- a/api/hackerinfo/models/hackerinfo.settings.json
+++ b/api/hackerinfo/models/hackerinfo.settings.json
@@ -21,6 +21,9 @@
     "game": {
       "via": "hackerinfo",
       "model": "game"
+    },
+    "obtainedInterests": {
+      "type": "string"
     }
   }
 }
