--- a/api/userinfo/models/userinfo.settings.json
+++ b/api/userinfo/models/userinfo.settings.json
@@ -27,6 +27,10 @@
     },
     "interests": {
       "type": "string"
+    },
+    "score": {
+      "type": "integer",
+      "default": 0
     }
   }
 }
