--- a/api/hackerinfo/models/hackerinfo.settings.json
+++ b/api/hackerinfo/models/hackerinfo.settings.json
@@ -24,6 +24,9 @@
     },
     "obtainedInterests": {
       "type": "string"
+    },
+    "previousField": {
+      "type": "integer"
     }
   }
 }
