--- a/api/userinfo/models/userinfo.settings.json
+++ b/api/userinfo/models/userinfo.settings.json
@@ -28,7 +28,7 @@
     "interests": {
       "type": "string"
     },
-    "previousField": {
+    "previousfield": {
       "type": "integer"
     },
     "score": {
