--- a/api/hackerinfo/models/hackerinfo.settings.json
+++ b/api/hackerinfo/models/hackerinfo.settings.json
@@ -25,8 +25,11 @@
     "obtainedInterests": {
       "type": "string"
     },
-    "previousField": {
+    "previousfield": {
       "type": "integer"
+    },
+    "totaldiscovery": {
+      "type": "string"
     }
   }
 }
