def value prevfields

--- a/api/userinfo/models/userinfo.settings.json
+++ b/api/userinfo/models/userinfo.settings.json
@@ -29,7 +29,8 @@
       "type": "string"
     },
     "previousfield": {
-      "type": "integer"
+      "type": "integer",
+      "default": 1
     },
     "score": {
       "type": "integer",
