--- a/api/hackerinfo/models/hackerinfo.settings.json
+++ b/api/hackerinfo/models/hackerinfo.settings.json
@@ -26,7 +26,8 @@
       "type": "string"
     },
     "previousfield": {
-      "type": "integer"
+      "type": "integer",
+      "default": 1
     },
     "email": {
       "type": "string"
