--- a/api/game/models/game.settings.json
+++ b/api/game/models/game.settings.json
@@ -43,6 +43,9 @@
     "hackerdiscoveries": {
       "via": "game",
       "collection": "hackerdiscovery"
+    },
+    "winner": {
+      "type": "string"
     }
   }
 }
