--- a/api/hackerdiscovery/models/hackerdiscovery.settings.json
+++ b/api/hackerdiscovery/models/hackerdiscovery.settings.json
@@ -16,8 +16,8 @@
       "type": "string"
     },
     "game": {
-      "model": "game",
-      "via": "hackerdiscoveries"
+      "via": "hackerdiscoveries",
+      "model": "game"
     }
   }
 }
