--- a/api/hackernote/models/hackernote.settings.json
+++ b/api/hackernote/models/hackernote.settings.json
@@ -16,8 +16,8 @@
       "type": "string"
     },
     "game": {
-      "model": "game",
-      "via": "hackernotes"
+      "via": "hackernotes",
+      "model": "game"
     }
   }
 }
