--- a/api/usernote/models/usernote.settings.json
+++ b/api/usernote/models/usernote.settings.json
@@ -16,8 +16,8 @@
       "type": "string"
     },
     "game": {
-      "model": "game",
-      "via": "usernotes"
+      "via": "usernotes",
+      "model": "game"
     }
   }
 }
