--- a/api/hackerinfo/models/hackerinfo.settings.json
+++ b/api/hackerinfo/models/hackerinfo.settings.json
@@ -23,7 +23,8 @@
       "model": "game"
     },
     "obtainedInterests": {
-      "type": "string"
+      "type": "string",
+      "default": "-"
     },
     "previousfield": {
       "type": "integer",
