remove defaultvalue obtained interests

--- a/api/hackerinfo/models/hackerinfo.settings.json
+++ b/api/hackerinfo/models/hackerinfo.settings.json
@@ -23,8 +23,7 @@
       "model": "game"
     },
     "obtainedInterests": {
-      "type": "string",
-      "default": "-"
+      "type": "string"
     },
     "previousfield": {
       "type": "integer",
